--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="https://github.com/Nitigya2000/TinD/blob/master/TechCrunch.png?raw=true" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="https://github.com/Nitigya2000/TinD/blob/master/bizinsider.png?raw=true" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
