--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <button type="button" class="btn btn-outline-light btn-lg Download-Button"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img class="Iphone" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="Iphone" src="https://github.com/Nitigya2000/TinD/blob/master/iphone6.png?raw=true" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -106,19 +106,19 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="https://github.com/Nitigya2000/TinD/blob/master/dog-img.jpg?raw=true" alt="dog-profile">
           <em>Jaswinder, Ludhiana</em>
 
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/Keyur-img.jpeg" alt="Keyur-profile">
+          <img class="testimonial-image" src="https://github.com/Nitigya2000/TinD/blob/master/Keyur-img.jpeg?raw=true" alt="Keyur-profile">
           <em>Keyur, Gujarat</em>
 
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">O yaar, mai pehle bada tension mai tha apne kutte ki shaadi ko leke, par ab nhi hu</h2>
-          <img class="testimonial-image" src="images/Bhanu-img.jpeg" alt="Bhanu-profile">
+          <img class="testimonial-image" src="https://github.com/Nitigya2000/TinD/blob/master/Bhanu-img.jpeg?raw=true" alt="Bhanu-profile">
           <em>Bhanu, Jhalandar</em>
         </div>
       </div>
@@ -141,9 +141,9 @@
 
   <section id="press">
     <img class="press-logo" src="https://github.com/Nitigya2000/TinD/blob/master/TechCrunch.png?raw=true" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="https://github.com/Nitigya2000/TinD/blob/master/tnw.png?raw=true" alt="tnw-logo">
     <img class="press-logo" src="https://github.com/Nitigya2000/TinD/blob/master/bizinsider.png?raw=true" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="https://github.com/Nitigya2000/TinD/blob/master/mashable.png?raw=true" alt="mashable-logo">
 
   </section>
 
